# CraftCore

./: Cargo.toml  Makefile  README.md  run.sh
arch/: Cargo.toml  README.md
asm/: Cargo.toml
asm/src/: error.rs  ident.rs  label.rs  lib.rs  main.rs  msg.rs  parser.rs  util.rs
emu/: Cargo.toml  README.md
rk16/: Cargo.toml
rk16-arch/: Cargo.toml
rk16-asm/: Cargo.toml
tasm/: Cargo.toml  README.ja.md  README.md  test_memory_json.rs
tasm/doc/: Compiler.ja.md  Compiler.md  Grammer.ja.md  tasm.ebnf
tasm/sample/: asm.tasm  main.tasm
tasm/src/: ast.rs  codegen.rs  collect.rs  error.rs  fir.rs  flowgen.rs  global.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
tasm/src/allocate/: allocator.rs
tasm/src/bingen/: generator.rs
tasm/src/collect/: constexpr.rs  flattype.rs  mod.rs  utils.rs
tasm/src/collect/table/: asms.rs  consts.rs  funcs.rs  statics.rs  types.rs
tasm/src/compile/: asm.rs  func.rs  mod.rs
tasm/src/convert/: asm2code.rs  func2code.rs  mod.rs  types.rs
tasm/src/eval/: asm.rs  code.rs  constexpr.rs  db.rs  eval.rs  func.rs  global.rs  local.rs  mod.rs  normtype.rs  typeof.rs
tasm/src/grammer/: ast.rs  lexer.rs  mod.rs  parser.rs  parsercore.rs  token.rs
tasm/src/link/: mod.rs  structs.rs
tasm/src/linker/: allocator.rs  binary.rs  dce.rs  deps.rs  generator.rs  memory.rs  mod.rs  structs.rs
tasm/src/symbols/: mod.rs  symbols.rs
tasm/src/symbols/table/: asms.rs  consts.rs  funcs.rs  mod.rs  statics.rs  types.rs
tasm/src/util/: display.rs  maps.rs  mod.rs
tasm/tests/: lexer.rs  multiple_token.rs  parser.rs  token_single.rs
(+75 files in other folders)
