[package]
name = "tasm"
version = "0.1.0"
edition = "2021"

[dependencies]
arch = { path = "../arch" }
clap = { version = "4.5.36", features = ["derive"] }
bimap = "0.6"
color-print = "0.3"
indexmap = { version = "2.0", features = ["serde"] }
itertools = "0.12"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
salsa = "0.25"
